<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:text="@string/co_name"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/slogan"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="300dp"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/btn_fb"
        android:clickable="true"
        android:drawableLeft="@drawable/facebuuk"
        android:text="@string/log_in_with_facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/btn_bg"
        android:drawableLeft="@drawable/goog"
        android:text="@string/log_in_with_gmail"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/btn_transparent"
        android:text="@string/sign_up_for_free"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/impot"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"

        android:text="@string/have_an_account"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>